tests/errors/parser-errors/atblock/at_block_missing_semicolon.smark
@_Table_@: col1, col2
This table is missing a semicolon after the header.
@_end_@
